--- a/vitual_mouse.ipynb
+++ b/vitual_mouse.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Author : Bharath Guntreddi\n",
+    "##### Author : Mr. Bharath Guntreddi\n",
     "##### Date : 13/08/2022"
    ]
   },
